basic css added

--- a/Dexter-ify/index.html
+++ b/Dexter-ify/index.html
@@ -4,19 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dexter-ify</title>
+    <link rel="stylesheet" href="./resources/css/index.css" type="text/css">
 </head>
 
 <body>
     <header>
         <h1>Dexter-ify</h1>
-        <img src = "resources/images/innocent_dexter.png" alt="dexter's image">
-        <p>casuse everything is possible for dexter</p>
+        <img src = "resources/images/innocent_dexter.png" alt="dexter's image" width = 180px>
+        <h4>casuse everything is possible for dexter</h4>
+        <button> subscribe </button>
     </header>
 
     <article>
+        <h2> subscribe to me</h2>
+        <form>
+            <input type = 'text'>
+            <input type = 'submit' value = 'sumbit'>
+        </form>
         <h2>Dexter</h2>
         <p> social media dedicated to dexter</p>
-        
+        <ul>
+            <li>its dexter again</li>
+            <li>again dexter</li>
+        </ul>
     </article>
 </body>
 </html>
