initial html complete

--- a/index.html
+++ b/index.html
@@ -6,9 +6,81 @@
     <title>tea-cozy</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    
 </head>
 <body>
-    
+    <header>
+        <img src="images/img-tea-cozy-logo.png" alt="website-logo" />
+        <nav>
+            <ul>
+                <li>missions</li>
+                <li>featured tea</li>
+                <li>location</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="hero">
+            <h2>our missions</h2>
+            <h4>Handpicked,  Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
+
+        <h2>tea of the month</h2>
+        <p>What's Steeping at The Tea Cozy?</p>
+
+        <div class="tea-container">
+            <figure>
+                <img src="/images/img-berryblitz.jpg" alt="">
+                <figcaption>fall belly blitz tea</figcaption>
+            </figure>
+            <figure>
+                <img src="/images/img-spiced-rum.jpg" alt="">
+                <figcaption>Spiced Rum Tea</figcaption>
+            </figure>
+            <figure>
+                <img src="images/img-donut.jpg" alt="">
+                <figcaption>seasonal donuts</figcaption>
+            </figure>
+            <figure>
+                <img src="images/img-myrtle-ave.jpg" alt="">
+                <figcaption>Myrtle Ave Tea</figcaption>
+            </figure>
+            <figure>
+                <img src="images/img-bedford-bizarre.jpg" alt="">
+                <figcaption>Bedford Bizarre tea</figcaption>
+            </figure>
+        </div>
+
+        <div class="locations">
+            <h2>Locations</h2>
+            <div class="location-container">
+                <div>
+                    <h3>Downtown</h3>
+                    <p>384 west 4th st</p>
+                    <p>suite 108</p>
+                    <p>portland, maine</p>
+                </div>
+                <div>
+                    <h3>East bayside</h3>
+                    <p>3433 phishrman's avenue</p>
+                    <p>(north corner)</p>
+                    <p>portland, maine</p>
+                </div>
+                <div>
+                    <h3>oakdale</h3>
+                    <p>515 crescent avenue</p>
+                    <p>second floor</p>
+                    <p>portland, maine</p>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <h2>the tea cozy</h2>
+        <address>
+            <p>contact@theteacozyy.com</p>
+            <p>917-555-8904</p>
+        </address>
+        copyright @ The Tea cozy 2017
+    </footer>
 </body>
 </html>
