--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
     <header>
         <img src="images/img-tea-cozy-logo.png" alt="website-logo" />
         <nav>
@@ -18,39 +19,41 @@
             </ul>
         </nav>
     </header>
+
     <main>
-        <div class="hero">
+        <section class="hero">
             <h2>our missions</h2>
             <h4>Handpicked,  Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-        </div>
+        </section>
+        
+        <section>
+            <h2>tea of the month</h2>
+            <p>What's Steeping at The Tea Cozy?</p>
+            <div class="tea-container">
+                <figure>
+                    <img src="/images/img-berryblitz.jpg" alt="">
+                    <figcaption>fall belly blitz tea</figcaption>
+                </figure>
+                <figure>
+                    <img src="/images/img-spiced-rum.jpg" alt="">
+                    <figcaption>Spiced Rum Tea</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/img-donut.jpg" alt="">
+                    <figcaption>seasonal donuts</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/img-myrtle-ave.jpg" alt="">
+                    <figcaption>Myrtle Ave Tea</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/img-bedford-bizarre.jpg" alt="">
+                    <figcaption>Bedford Bizarre tea</figcaption>
+                </figure>
+            </div>
+        </section>
 
-        <h2>tea of the month</h2>
-        <p>What's Steeping at The Tea Cozy?</p>
-
-        <div class="tea-container">
-            <figure>
-                <img src="/images/img-berryblitz.jpg" alt="">
-                <figcaption>fall belly blitz tea</figcaption>
-            </figure>
-            <figure>
-                <img src="/images/img-spiced-rum.jpg" alt="">
-                <figcaption>Spiced Rum Tea</figcaption>
-            </figure>
-            <figure>
-                <img src="images/img-donut.jpg" alt="">
-                <figcaption>seasonal donuts</figcaption>
-            </figure>
-            <figure>
-                <img src="images/img-myrtle-ave.jpg" alt="">
-                <figcaption>Myrtle Ave Tea</figcaption>
-            </figure>
-            <figure>
-                <img src="images/img-bedford-bizarre.jpg" alt="">
-                <figcaption>Bedford Bizarre tea</figcaption>
-            </figure>
-        </div>
-
-        <div class="locations">
+        <section class="locations">
             <h2>Locations</h2>
             <div class="location-container">
                 <div>
@@ -72,7 +75,8 @@
                     <p>portland, maine</p>
                 </div>
             </div>
-        </div>
+        </section>
+        
     </main>
     <footer>
         <h2>the tea cozy</h2>
