--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <img src="images/img-tea-cozy-logo.png" alt="website-logo" />
+        <img src="images/img-tea-cozy-logo.png" alt="website-logo" style="max-height:50px;"/>
         <nav>
             <ul>
                 <li>missions</li>
@@ -76,7 +76,7 @@
                 </div>
             </div>
         </section>
-        
+
     </main>
     <footer>
         <h2>the tea cozy</h2>
