--- a/index.html
+++ b/index.html
@@ -13,20 +13,22 @@
         <img src="images/img-tea-cozy-logo.png" alt="website-logo" style="max-height:50px;"/>
         <nav>
             <ul>
-                <li>missions</li>
-                <li>featured tea</li>
-                <li>location</li>
+                <li><a href="#">mission</a></li>
+                <li><a href="#">Featured</a></li>
+                <li><a href="#">location</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section class="hero">
-            <h2>our missions</h2>
-            <h4>Handpicked,  Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+            <div class="mission">
+                <h2>our missions</h2>
+                <h5>Handpicked,  Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h5>
+            </div>
         </section>
         
-        <section>
+        <section class='tea-of-month'>
             <h2>tea of the month</h2>
             <p>What's Steeping at The Tea Cozy?</p>
             <div class="tea-container">
