--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tea-cozy</title>
+    <title>tea-shop</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <header>
-        <img src="images/img-tea-cozy-logo.png" alt="website-logo" style="max-height:50px;"/>
+        <img src="images/img-tea-shop-logo.png" alt="website-logo"/>
         <nav>
             <ul>
                 <li><a href="#">mission</a></li>
@@ -30,7 +30,7 @@
         
         <section class='tea-of-month'>
             <h2>tea of the month</h2>
-            <p>What's Steeping at The Tea Cozy?</p>
+            <p>What's Steeping at The Tea shop?</p>
             <div class="tea-container">
                 <figure>
                     <img src="/images/img-berryblitz.jpg" alt="">
@@ -55,7 +55,7 @@
             </div>
         </section>
 
-        <section class="locations">
+        <section class="location">
             <h2>Locations</h2>
             <div class="location-container">
                 <div>
@@ -78,15 +78,16 @@
                 </div>
             </div>
         </section>
-
     </main>
+    
     <footer>
-        <h2>the tea cozy</h2>
-        <address>
-            <p>contact@theteacozyy.com</p>
+        <h2>the tea shop</h2>
+        <address styple="text-transform: lowercase;">
+            <p>contact@theteashop.com</p>
             <p>917-555-8904</p>
         </address>
-        copyright @ The Tea cozy 2017
+        <p>©2021 athul jyothis. Some Rights Reserved.
+        </p>
     </footer>
 </body>
 </html>
