--- a/index.html
+++ b/index.html
@@ -10,24 +10,26 @@
 <body>
 
     <header>
-        <img src="images/img-tea-shop-logo.png" alt="website-logo"/>
+        <img src="images/img-tea-cozy-logo.png" alt="website-logo"/>
         <nav>
             <ul>
-                <li><a href="#">mission</a></li>
-                <li><a href="#">Featured</a></li>
-                <li><a href="#">location</a></li>
+                <li><a href="#mission">mission</a></li>
+                <li><a href="#featured">Featured</a></li>
+                <li><a href="#location">location</a></li>
             </ul>
         </nav>
     </header>
 
+    <a href="" id="mission"></a>
     <main>
         <section class="hero">
-            <div class="mission">
-                <h2>our missions</h2>
+            <div>
+                <h2 id=mission >our missions</h2>
                 <h5>Handpicked,  Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h5>
             </div>
         </section>
         
+        <a href="" id="featured"></a>
         <section class='tea-of-month'>
             <h2>tea of the month</h2>
             <p>What's Steeping at The Tea shop?</p>
@@ -55,6 +57,7 @@
             </div>
         </section>
 
+        <a href="" id="location"></a>
         <section class="location">
             <h2>Locations</h2>
             <div class="location-container">
@@ -79,12 +82,12 @@
             </div>
         </section>
     </main>
-    
+
     <footer>
         <h2>the tea shop</h2>
         <address styple="text-transform: lowercase;">
             <p>contact@theteashop.com</p>
-            <p>917-555-8904</p>
+            <p>952-XXX-698</p>
         </address>
         <p>©2021 athul jyothis. Some Rights Reserved.
         </p>
