--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li><a href="#mission">mission</a></li>
-                <li><a href="#featured">Featured</a></li>
+                <li><a href="#featured">featured</a></li>
                 <li><a href="#location">location</a></li>
             </ul>
         </nav>
@@ -35,11 +35,11 @@
             <p>What's Steeping at The Tea shop?</p>
             <div class="tea-container">
                 <figure>
-                    <img src="/images/img-berryblitz.jpg" alt="">
+                    <img src="images/img-berryblitz.jpg" alt="">
                     <figcaption>fall belly blitz tea</figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/img-spiced-rum.jpg" alt="">
+                    <img src="images/img-spiced-rum.jpg" alt="">
                     <figcaption>Spiced Rum Tea</figcaption>
                 </figure>
                 <figure>
