fixed mission statement

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
         <img src="images/img-tea-cozy-logo.png" alt="website-logo"/>
         <nav>
             <ul>
-                <li><a href="#mission">mission</a></li>
+                <li><a href="#mission-target">mission</a></li>
                 <li><a href="#featured">featured</a></li>
                 <li><a href="#location">location</a></li>
             </ul>
         </nav>
     </header>
 
-    <a href="" id="mission"></a>
+    <a href="" id="mission-target"></a>
     <main>
         <section class="hero">
-            <div>
-                <h2 id=mission >our missions</h2>
-                <h5>Handpicked,  Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h5>
+            <div class=mission>
+                <h2 >our mission</h2>
+                <p>To provide our customers with the best tasting, all natural, USDA Organic teas for their everyday lives</p>
             </div>
         </section>
         
