fixed phone no.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <h2>the tea shop</h2>
         <address styple="text-transform: lowercase;">
             <p>contact@theteashop.com</p>
-            <p>952-XXX-698</p>
+            <p>952-XXXX-698</p>
         </address>
         <p>©2021 athul jyothis. Some Rights Reserved.
         </p>
