fixed copyright text size

--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@
             <h2>Locations</h2>
             <div class="location-container">
                 <div>
-                    <h3>Downtown</h3>
-                    <p>384 west 4th st</p>
-                    <p>suite 108</p>
-                    <p>portland, maine</p>
+                    <h3>Mumbai</h3>
+                    <p>B/604, Siddhi Avenue</p>
+                    <p>Chikuwadi</p>
+                    <p>Maharashtra, india</p>
                 </div>
                 <div>
-                    <h3>East bayside</h3>
-                    <p>3433 phishrman's avenue</p>
-                    <p>(north corner)</p>
-                    <p>portland, maine</p>
+                    <h3>banglore</h3>
+                    <p>59, Devraj Building</p>
+                    <p>S V Road</p>
+                    <p>karnataka, india</p>
                 </div>
                 <div>
-                    <h3>oakdale</h3>
-                    <p>515 crescent avenue</p>
-                    <p>second floor</p>
-                    <p>portland, maine</p>
+                    <h3>kochi</h3>
+                    <p>51 Park avenue</p>
+                    <p>PANAMPILLY NAGARr</p>
+                    <p>kerala, india</p>
                 </div>
             </div>
         </section>
