logo href added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <img src="images/img-tea-cozy-logo.png" alt="website-logo"/>
+        <a href="#mission-target"><img src="images/img-tea-cozy-logo.png" alt="website-logo"/></a>
         <nav>
             <ul>
                 <li><a href="#mission-target">mission</a></li>
