--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div>
                     <h3>kochi</h3>
                     <p>51, Park avenue</p>
-                    <p>PANAMPILLY NAGARr</p>
+                    <p>Panampilly Nagar</p>
                     <p>kerala, india</p>
                 </div>
             </div>
